--- a/assets/style.css
+++ b/assets/style.css
@@ -1,68 +1,170 @@
-*, *::after, *::before{
+*,
+*::after,
+*::before {
     padding: 0;
     margin: 0;
 }
-body{
+
+body {
     font-family: 'Inter';
 }
+
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
-.main{
+
+.main {
     width: 100vw;
     height: 100%;
-    background-image: url('./img/bg2.png');
-    background-repeat: no-repeat; 
+    background-image: url('./img/bg.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-.frame{
+
+.frame {
     background-image: url('./img/frame.png');
     background-size: cover;
     background-position: top;
     position: absolute;
-    top:112px;
+    top: 112px;
     right: 90px;
     left: 90px;
     bottom: 60px;
 
 }
-.wrap_rooms{
-    
-}
-.rooms{
-overflow-y: auto;
-height: 450px;
+
+.rooms {
+    overflow-y: auto;
+    height: 450px;
     margin: 200px 90px 94px 90px;
     display: grid;
-grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-gap: 60px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 60px;
     /* grid-template-rows: 1fr; */
 }
-.room{
+
+.room {
     position: relative;
+    cursor: pointer;
 }
-.room img{
+
+.room img {
     width: 100%;
 }
-.room .room_number{
+
+.room .room_number {
     font-size: 64;
     font-weight: 700;
     color: #fff;
     position: absolute;
-    top: 26px;
+    top: 40%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
 
 }
-.room .room_members{
+
+.room .room_members {
     position: absolute;
     bottom: 14px;
-    left: 50%;
-    transform: translateX(-50%);
+    right: 15px;
+    left: 15px;
+
+    display: flex;
+    justify-content: center;
+    gap:5px;
+    /* left: 50%;
+    transform: translateX(-50%); */
 
 }
+
+.room .room_members img {
+    width: 22px;
+
+    /* height: 25px; */
+}
+
+@media screen and (max-width:1700px) {
+    .rooms {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 350px;
+        margin: 160px 90px 94px 90px;
+    }
+}
+@media screen and (max-width:1300px) {
+.room .room_number {
+font-size: 40px;
+}
+    
+    .room .room_members{
+bottom: 8px;
+    }
+    .room .room_members img{
+        width: 16px;
+    }
+}
+@media screen and (max-width:1128px) {
+    .rooms {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 350px;
+        margin: 160px 90px 94px 90px;
+        gap: 30px;
+    }
+}
+@media screen and (max-width:900px) {
+
+    .rooms {
+        /* grid-template-columns: 1fr 1fr 1fr 1fr;
+        height: 350px;
+        gap: ; */
+        margin: 160px 50px 94px 50px;
+    }
+.room .room_number {
+font-size: 30px;
+}
+.room .room_members{
+bottom: 8px;
+height: 15px;
+gap: 2px;
+    }
 .room .room_members img{
-width: 22px;
-height: 25px;
+    object-fit: contain;
+        /* width: calc(100% / 3); */
+    }
+}
+@media screen and (max-width:400px) {
+.main {
+    background-image: url('./img/bg_mb.jpg');
+}
+.frame {
+    background-image: url('./img/frame_mb.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    inset: 0;
+    top: 100px;
+    left: 5px;
+    right: 5px;
+}
+    .rooms {
+        /* grid-template-columns: 1fr 1fr 1fr 1fr;
+        height: 350px;
+        gap: ; */
+        margin: 55px 30px 30px 30px;
+        height: 450px;
+        gap: 14px;
+        /* height: 100%; */
+    }
+.room .room_number {
+font-size: 24px;
+}
+.room .room_members{
+bottom: 5px;
+height: 10px;
+gap: 2px;
+    }
+.room .room_members img{
+    object-fit: contain;
+        /* width: calc(100% / 3); */
+    }
 }
